Both Scripts need to be fixed

--- a/Pari e Dispari/index.html
+++ b/Pari e Dispari/index.html
@@ -5,7 +5,10 @@
     <title>PARI & DISPARI</title>
   </head>
   <body>
-
+    <h2 id="userNumber"></h2>
+    <h2 id="pcNumber"></h2>
+    <h1 id="result"></h1>
+    <h1 id="finalResult"></h1>
     <script src="js/script.js"></script>
 
   </body>
