--- a/Palidroma/index.html
+++ b/Palidroma/index.html
@@ -5,7 +5,7 @@
     <title>PALIDROMA</title>
   </head>
   <body>
-
+    <h1 id="result"></h1>
     <script src="js/script.js"></script>
 
   </body>
